--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,37 @@
-.App {
+/* .App {
   text-align: center;
+} */
+
+.container {
+  width: 80%;
+  margin: 0 auto 0 auto;
+}
+
+.card {
+  flex: 1 1 auto;
+  margin-top: 10px;
+  border: 1px solid #b3b3b3;
+  border-radius: 0.375rem;
+  box-shadow: 1px 1px 5px #b3b3b3;
+}
+
+.card-header {
+  padding: 0.5rem 1rem;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-radius: 0.375rem 0.375rem 0 0;
+  border-bottom: 1px solid #bbbaba;
+  font-size: 1.25rem;
+  text-align: left;
+  word-wrap: break-word;
+}
+
+.card-body {
+  flex: 1 1 auto;
+  padding: 1rem 1rem;
+}
+
+.card-title {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
 }
