--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 /* .App {
   text-align: center;
 } */
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
 
 .container {
   width: 80%;
@@ -10,23 +15,23 @@
 .card {
   flex: 1 1 auto;
   margin-top: 10px;
-  border: 1px solid #b3b3b3;
+  border: .01rem solid #b3b3b3;
   border-radius: 0.375rem;
   box-shadow: 1px 1px 5px #b3b3b3;
 }
 
 .card-header {
-  padding: 0.5rem 1rem;
-  align-items: center;
+  padding: 1rem;
   background-color: rgba(0, 0, 0, 0.03);
   border-radius: 0.375rem 0.375rem 0 0;
   border-bottom: 1px solid #bbbaba;
-  font-size: 1.25rem;
+  font-size: 1rem;
   text-align: left;
   word-wrap: break-word;
 }
 
 .card-body {
+  word-wrap: break-word;
   flex: 1 1 auto;
   padding: 1rem 1rem;
 }
@@ -34,4 +39,119 @@
 .card-title {
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
+}
+
+.card-footer {
+  background-color: rgba(0, 0, 0, 0.09);
+  padding: .3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: .1rem;
+  justify-content: end;
+  border-radius: 0 0 0.375rem 0.375rem;
+}
+
+.label {
+  display: block;
+  font-size: 1.2rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 1.2rem;
+  padding: 1rem 1rem;
+  border-radius: .25rem;
+  border: .01rem solid grey;
+  font-size: 1.1rem;
+  margin-bottom: .3rem;
+}
+
+textarea.form-control {
+  display: block;
+  width: 100%;
+  height: 10rem;
+  padding: 1rem 1rem;
+  border-radius: .25rem;
+  border: .01rem solid grey;
+  font-size: 1.1rem;
+  margin-bottom: .3rem;
+}
+
+.form-control>.invalid {
+  margin-bottom: 0;
+}
+
+.form-control:focus {
+  outline: .07rem solid skyblue;
+}
+
+.invalid {
+  color: red;
+  font-size: .9rem;
+  padding: .2rem .3rem;
+  display: block;
+}
+
+.btn {
+  display: inline-block;
+  padding: .375rem .75rem;
+  font-size: .5rem;
+  cursor: pointer;
+  border-radius: .375rem;
+  border: 0;
+}
+
+.btn-success {
+  background-color: #078f00;
+  display: inline-block;
+  padding: .4rem;
+  font-size: .6rem;
+  color: #fff;
+  cursor: pointer;
+  border: .1rem solid #078f00;
+}
+
+.btn-success:hover {
+  background-color: #067000;
+  border: .1rem solid #067000;
+}
+
+.btn-danger {
+  background-color: #ff2930;
+  display: inline-block;
+  padding: .4rem;
+  font-size: .6rem;
+  color: #fff;
+  cursor: pointer;
+  border: .1rem solid #ff2930;
+}
+
+.btn-danger:hover {
+  background-color: #e00f16;
+  border: .1rem solid #e00f16;
+}
+
+.btn-warning {
+  background-color: #ce6400;
+  display: inline-block;
+  padding: .4rem;
+  font-size: .6rem;
+  color: #fff;
+  cursor: pointer;
+  border: .1rem solid #ce6400;
+}
+
+.btn-warning:hover {
+  background-color: #f47e10;
+  border: .1rem solid #f47e10;
+}
+
+.flex-end {
+  padding: .3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: .3rem;
+  justify-content: end;
+  border-radius: 0 0 0.375rem 0.375rem;
 }
