--- a/src/App.css
+++ b/src/App.css
@@ -155,3 +155,14 @@ textarea.form-control {
   justify-content: end;
   border-radius: 0 0 0.375rem 0.375rem;
 }
+
+.form-control-file {
+  display: block;
+  width: 100%;
+  height: 3rem;
+  padding: .5rem .5rem;
+  border-radius: .25rem;
+  border: .1rem solid grey;
+  font-size: 1.1rem;
+  margin-bottom: .3rem;
+}
