--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,59 @@
-/* .App {
+#root {
+  display: flex;
+  justify-content: flex-start;
+  gap: 1;
+}
+
+.sidebar {
+  /* border-radius: 0 .5rem 0 .5rem; */
+  color: #fff;
+  background-color: rgba(42, 177, 230, 0.774);
+  display: block;
+  /* border: .2rem solid black; */
+  height: 100vh;
+  min-height: 100vh;
+  width: 15%;
+  min-width: 15%;
+  box-shadow: .3rem .1rem 1.1rem rgba(135, 206, 235, .5);
+}
+
+.sidebar>.sidebar-logo {
+  display: block;
+  font-size: 1.7rem;
   text-align: center;
-} */
+  margin: 1rem auto;
+  text-decoration: none;
+  padding: .5rem;
+  border-bottom: .1rem solid #fff;
+}
+
+.sidebar>.sidebar-item {
+  color: #fff;
+  display: block;
+  margin: 1rem 0;
+  text-decoration: none;
+  padding: 1rem;
+  font-size: 1.1rem;
+  border-bottom: .1rem solid rgba(255, 255, 255, .5);
+}
+
+.main-content {
+  display: block;
+  margin: 0 auto;
+  width: 82%;
+  min-width: 82%;
+}
+
 *,
 ::after,
 ::before {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .container {
-  width: 80%;
+  width: 95%;
   margin: 0 auto 0 auto;
 }
 
