--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,13 @@ textarea.form-control {
   margin-bottom: .3rem;
 }
 
+.camera-stream {
+  display: block;
+  margin: .3rem 0;
+  border-radius: .9rem;
+  padding: 0;
+}
+
 .form-control>.invalid {
   margin-bottom: 0;
 }
@@ -201,11 +208,19 @@ textarea.form-control {
   border-radius: 0 0 0.375rem 0.375rem;
 }
 
-.form-control-file {
+.btn-group {
+  display: flex;
+  justify-content: flex-start;
+  gap: .5rem;
+  margin-top: .3rem;
+}
+
+.form-control-select {
   display: block;
   width: 100%;
-  height: 3rem;
-  padding: .5rem .5rem;
+  height: 2.2rem;
+  background-color: #fff;
+  padding: 0rem .3rem;
   border-radius: .25rem;
   border: .1rem solid grey;
   font-size: 1.1rem;
