--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  background-color: #000;
-  color: #fff;
+  /* background-color: #000;
+  color: #fff; */
   display: flex;
   justify-content: flex-start;
   gap: 1;
