--- a/src/App.css
+++ b/src/App.css
@@ -53,17 +53,11 @@
   margin: 0;
 }
 
-.container {
-  width: 95%;
-  margin: 0 auto 0 auto;
-}
-
 .card {
   flex: 1 1 auto;
   margin-top: 10px;
   border: .01rem solid #b3b3b3;
   border-radius: 0.375rem;
-  box-shadow: 1px 1px 5px #b3b3b3;
 }
 
 .card-header {
@@ -94,34 +88,13 @@
   flex-wrap: wrap;
   gap: .1rem;
   justify-content: flex-end;
+  align-items: center;
   border-radius: 0 0 0.375rem 0.375rem;
 }
 
 .label {
   display: block;
   font-size: 1.2rem;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  height: 1.2rem;
-  padding: 1rem 1rem;
-  border-radius: .25rem;
-  border: .01rem solid grey;
-  font-size: 1.1rem;
-  margin-bottom: .3rem;
-}
-
-textarea.form-control {
-  display: block;
-  width: 100%;
-  height: 10rem;
-  padding: 1rem 1rem;
-  border-radius: .25rem;
-  border: .01rem solid grey;
-  font-size: 1.1rem;
-  margin-bottom: .3rem;
 }
 
 .comment-section {
@@ -177,14 +150,6 @@ textarea.form-control {
   font-weight: 600;
 }
 
-.form-control>.invalid {
-  margin-bottom: 0;
-}
-
-.form-control:focus {
-  outline: .07rem solid skyblue;
-}
-
 .invalid {
   color: red;
   font-size: .9rem;
@@ -192,64 +157,10 @@ textarea.form-control {
   display: block;
 }
 
-.btn {
-  display: inline-block;
-  padding: .375rem .75rem;
-  font-size: .5rem;
-  cursor: pointer;
-  border-radius: .375rem;
-  border: 0;
-  margin: 5px 0px;
-}
-
 .comment-section {
   margin: 0px 20px;
 }
 
-.btn-success {
-  background-color: #078f00;
-  display: inline-block;
-  padding: .4rem;
-  font-size: .6rem;
-  color: #fff;
-  cursor: pointer;
-  border: .1rem solid #078f00;
-}
-
-.btn-success:hover {
-  background-color: #067000;
-  border: .1rem solid #067000;
-}
-
-.btn-danger {
-  background-color: #ff2930;
-  display: inline-block;
-  padding: .4rem;
-  font-size: .6rem;
-  color: #fff;
-  cursor: pointer;
-  border: .1rem solid #ff2930;
-}
-
-.btn-danger:hover {
-  background-color: #e00f16;
-  border: .1rem solid #e00f16;
-}
-
-.btn-warning {
-  background-color: #ce6400;
-  display: inline-block;
-  padding: .4rem;
-  font-size: .6rem;
-  color: #fff;
-  cursor: pointer;
-  border: .1rem solid #ce6400;
-}
-
-.btn-warning:hover {
-  background-color: #f47e10;
-  border: .1rem solid #f47e10;
-}
 
 .flex-end {
   padding: .3rem;
@@ -258,10 +169,6 @@ textarea.form-control {
   gap: .3rem;
   justify-content: flex-end;
   border-radius: 0 0 0.375rem 0.375rem;
-}
-
-.d-flex {
-  display: flex;
 }
 
 .img-thumbnail {
@@ -277,7 +184,7 @@ textarea.form-control {
   width: 100%;
   object-fit: cover;
   max-height: 20vw;
-  min-height: 5vw;
+  min-height: 20vw;
   border-radius: 5px 5px 0px 0px;
 }
 
@@ -293,23 +200,4 @@ textarea.form-control {
   padding-left: 10px;
   padding-right: 10px;
   margin: 10px;
-}
-
-.btn-group {
-  display: flex;
-  justify-content: flex-start;
-  gap: .5rem;
-  margin-top: .3rem;
-}
-
-.form-control-select {
-  display: block;
-  width: 100%;
-  height: 2.2rem;
-  background-color: #fff;
-  padding: 0rem .3rem;
-  border-radius: .25rem;
-  border: .1rem solid grey;
-  font-size: 1.1rem;
-  margin-bottom: .3rem;
 }
