--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,13 @@
   border-radius: 0 0 0.375rem 0.375rem;
 }
 
+.date-picker {
+  display: block;
+  width: 100%;
+  border-radius: .3rem;
+  padding: 0 10px
+}
+
 .label {
   display: block;
   font-size: 1.2rem;
