--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,22 @@
   padding: 0 10px
 }
 
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .chat-input {
   padding: 5px;
   display: flex;
